--- a/InvoiceConsoleApp/appsettings.json
+++ b/InvoiceConsoleApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Settings": {
-    "Setting1": "Value1",
-    "Setting2": "Value2"
+    "LogFilePath": "C:\\SystemLogs\\",
+    "LogFileName": "InvoicConsoleApp - {Date} .txt"
   }
 }
